# lucan6290.github.io

./: .claude-guidelines.md  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_MANAGEMENT.md  README.md  THEME_SETUP.md  _config.butterfly.yml  _config.yml  package-lock.json  package.json  remove-covers.js  start.mjs
admin-dev/backend/: .env.development  .env.example  main.py  pyproject.toml  requirements.txt
admin-dev/backend/src/blog_admin/: __init__.py  main.py
admin-dev/backend/src/blog_admin/api/: __init__.py
admin-dev/backend/src/blog_admin/api/admin/: __init__.py
admin-dev/backend/src/blog_admin/core/: __init__.py  command_policy.py  errors.py  path_security.py  response.py  schemas.py  settings.py
admin-dev/backend/src/blog_admin/modules/ai/: __init__.py  application.py  graphs.py  models.py  post_io.py  prompts.py  safety.py  schemas.py  validation.py
admin-dev/backend/src/blog_admin/modules/article_index/: __init__.py  application.py  article_index_cache.py  article_scanner.py  frontmatter_parser.py  knowledge_retriever.py  schemas.py
admin-dev/backend/src/blog_admin/modules/assets/: __init__.py  application.py  image_naming.py  repository.py  scanner.py  schemas.py  service.py
admin-dev/backend/src/blog_admin/modules/categories/: application.py  registry.py
admin-dev/backend/src/blog_admin/modules/content/: __init__.py  (+7 more)
admin-dev/backend/tests/: test_admin_v1_contract.py  test_ai_writing_boundaries.py  test_assets_security.py  test_category_registry_assets.py  test_content_repository.py  test_gitops_security.py  test_no_legacy_app_imports.py
(+473 files in other folders)
